# ethmon

./: README.md  config.yaml  pyproject.toml  test.py  test.sh  test.txt
core/: scanner.py  wol.py
db/: devices.db
