[project]
name = "ether-monitor"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "pyyaml",
    "fastapi",
    "uvicorn",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"     # ← this was wrong before

[tool.setuptools.packages.find]
where = ["."]